--- a/crook-county/css/main.css
+++ b/crook-county/css/main.css
@@ -24,7 +24,7 @@ section {
   font-weight: bolder;
 }
 
-.player-score {
+.player {
   align-self: flex-end;
   font-size: larger;
   font-weight: bold;
@@ -76,14 +76,14 @@ section {
   margin: 3px;
 }
 
-.p1-bank {
+#p1-bank {
   grid-column-start: 8;
   grid-column-end: 9;
   grid-row-start: 1;
   grid-row-end: 3;
 }
 
-.p2-bank {
+#p2-bank {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
