--- a/Mancala/css/main.css
+++ b/Mancala/css/main.css
@@ -76,14 +76,14 @@ section {
   margin: 3px;
 }
 
-#p1-bank {
+[id='6'] {
   grid-column-start: 8;
   grid-column-end: 9;
   grid-row-start: 1;
   grid-row-end: 3;
 }
 
-#p2-bank {
+[id='13'] {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
