--- a/css/main.css
+++ b/css/main.css
@@ -76,14 +76,14 @@ section {
   margin: 3px;
 }
 
-[id='6'] {
+[id="6"] {
   grid-column-start: 8;
   grid-column-end: 9;
   grid-row-start: 1;
   grid-row-end: 3;
 }
 
-[id='13'] {
+[id="13"] {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
